// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullPageModal renders correctly when passed children 1`] = `
<div
  data-styleName="modal"
>
  <div
    data-styleName="content"
  >
    <div
      data-styleName="left-sidebar"
    >
      <div
        data-styleName="left-sidebar-fixed"
      />
    </div>
    <div
      data-styleName="center"
    >
      <div>
        First Child
      </div>
      <div>
        Second Child
      </div>
    </div>
    <div
      data-styleName="right-sidebar"
    >
      <div
        data-styleName="right-sidebar-inner"
      >
        <CloseButton />
      </div>
    </div>
  </div>
</div>
`;

exports[`FullPageModal renders correctly with a single component 1`] = `
<div
  data-styleName="modal"
>
  <div
    data-styleName="content"
  >
    <div
      data-styleName="left-sidebar"
    >
      <div
        data-styleName="left-sidebar-fixed"
      />
    </div>
    <div
      data-styleName="center"
    >
      <div>
        The Content
      </div>
    </div>
    <div
      data-styleName="right-sidebar"
    >
      <div
        data-styleName="right-sidebar-inner"
      >
        <CloseButton />
      </div>
    </div>
  </div>
</div>
`;

exports[`FullPageModal renders correctly with multiple tabs 1`] = `
<div
  data-styleName="modal"
>
  <div
    data-styleName="content"
  >
    <div
      data-styleName="left-sidebar"
    >
      <div
        data-styleName="left-sidebar-fixed border"
      >
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          data-styleName="nav-link"
          exact={true}
          key="/settings"
          replace={true}
          to="/settings"
        >
          Account
        </NavLink>
        <NavLink
          activeClassName="active"
          ariaCurrent="true"
          data-styleName="nav-link"
          exact={true}
          key="/settings/communities"
          replace={true}
          to="/settings/communities"
        >
          Communities
        </NavLink>
      </div>
    </div>
    <div
      data-styleName="center narrow"
    >
      <Route
        exact={true}
        key="/settings"
        path="/settings"
        render={[Function]}
      />
      <Route
        exact={true}
        key="/settings/communities"
        path="/settings/communities"
        render={[Function]}
      />
    </div>
    <div
      data-styleName="right-sidebar"
    >
      <div
        data-styleName="right-sidebar-inner"
      >
        <CloseButton />
      </div>
    </div>
  </div>
</div>
`;
